# test-mining-sol

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  METEORA_INTEGRATION_GUIDE.md  README.md  bun.lockb  change.md  encrypted_invite_design.md  hash_invite_system_plan.md  kaisetsu.txt  overview.md  package.json  random.txt  single_use_invite_implementation.md  test-kaisetsu.txt  test_overview.md  tsconfig.json
docs/: FARM_LEVEL_EXTENSION_DESIGN.md  FARM_LEVEL_USAGE_EXAMPLES.md  PROBABILITY_TABLE_MANAGEMENT.md  README.md  SIMPLIFIED_INVITE_SYSTEM.md  TESTING_GUIDE.md  admin.md  extensions.md  frontend-overview.md  initialization.md  instructions.md  invite-system.md  overview.md  probability-tables.md  test-kaisetsu.txt  testing.md  vrf-implementation.md
frontend/: README.md  (+9 more)
programs/facility-game/: Cargo.toml
programs/facility-game/src/: constants.rs  economics.rs  error.rs  error_handling.rs  lib.rs  state.rs  state_meteora.rs  tests.rs  utils.rs
programs/facility-game/src/instructions/: admin.rs  facility.rs  farm.rs  invite.rs  meteora.rs  meteora_admin.rs  meteora_advanced.rs  meteora_advanced_simple.rs  meteora_minimal.rs  mod.rs  mystery.rs  referral.rs  referral_rewards.rs  rewards.rs  seeds.rs  transfer.rs  transfer_improved.rs  user.rs
programs/facility-game/src/test_modules/: economics_advanced_tests.rs  error_comprehensive_tests.rs  state_advanced_tests.rs
programs/facility-game/src/tests/: admin_tests.rs  basic_tests.rs  economic_distribution_tests.rs  economic_model_validation_tests.rs  error_tests.rs  instruction_tests.rs  mod.rs  referral_system_tests.rs  seed_auto_discard_tests.rs  seed_storage_integration_tests.rs  state_tests.rs  utils_tests.rs  vrf_integration_tests.rs  vrf_performance_tests.rs  vrf_seed_pack_tests.rs
programs/facility-game/src/validation/: admin_validation.rs  common.rs  economic_validation.rs  game_validation.rs  mod.rs  time_validation.rs  user_validation.rs
(+85 files in other folders)
