[package]
name = "farm-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# IMPORTANT: Never downgrade these core versions!
# Anchor = 0.31.1, SPL Token 2022 = 6.0.0 (user requirement)
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = "6.0.0"
# mpl-token-metadata = "4.0.0"  # Temporarily removed to resolve dependency conflicts
# switchboard-on-demand = "0.4.0"  # Manual VRF implementation instead
arrayref = "0.3.7"